--- a/contacto.html
+++ b/contacto.html
@@ -11,82 +11,67 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/style.css" />
-
+    <link rel="stylesheet" href="/css/style.css"">
     <title>Document</title>
   </head>
   <body>
     <header class="header">
       <div class="contenedor">
         <div class="barra">
-          <a class="logo" href="index.html">
-            <h1 class="logo__nombre no-margin centrar-texto">
-              Blog<span class="logo__bold">DeCafé</span>
+          <a href="index.html">
+            <h1 class="barra__bold no-margin centrar-texto">
+              Blog<span class="barra__normal">DeCafé</span>
             </h1>
           </a>
-          <div class="navegacion">
+          <nav class="navegacion">
             <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
             <a class="navegacion__enlace" href="cursos.html">Cursos</a>
             <a class="navegacion__enlace" href="contacto.html">Contacto</a>
-          </div>
+          </nav>
+        </div>
+        <div class="header__texto">
+          <h2 class="centrar-texto no-margin">
+            Blog de Café con consejos y cursos
+          </h2>
+          <p class="centrar-texto no-margin">
+            Aprende de los expertos con las mejores recetas y consejos
+          </p>
         </div>
       </div>
-      <div class="header__texto">
-        <h2 class="centrar-texto no-margin">
-          Blog de Café con consejos y cursos
-        </h2>
-        <p class="centrar-texto no-margin">
-          Aprende de los expertos con las mejores recetas y consejos
-        </p>
-      </div>
     </header>
-    <div class="contenedor">
-      <h4 class="centrar-texto">Contacto</h4>
+    <main class="contenedor">
+      <h3 class="centrar-texto">Contacto</h3>
       <div class="contacto-bg"></div>
       <form class="formulario">
         <div class="campo">
           <label class="campo__label" for="nombre">Nombre</label>
-          <input
-            class="campo__field"
-            type="text"
-            id="nombre"
-            placeholder="Tu Nombre"
-          />
+          <input class="campo__field" type="text" id="nombre" placeholder="Tu Nombre" />
         </div>
         <div class="campo">
           <label class="campo__label" for="email">Email</label>
-          <input
-            class="campo__field"
-            type="email"
-            id="email"
-            placeholder="Tu Email"
-          />
+          <input class="campo__field" type="email" id="email" placeholder="Tu Email" />
         </div>
         <div class="campo">
           <label class="campo__label" for="mensaje">Mensaje</label>
-          <textarea
-            class="campo__field campo__field--textarea"
-            id="mensaje"
-          ></textarea>
+          <textarea class="campo__field campo__field--textarea id="mensaje"></textarea>
         </div>
-        <input class="boton boton--primario" type="submit" value="Enviar" />
+        <input class="boton boton--primario" type="submit" value="Enviar">
       </form>
-    </div>
+    </main>
     <footer class="footer">
-      <div class="contenedor">
-        <div class="barra">
-          <a class="logo" href="index.html">
-            <h1 class="logo__nombre no-margin centrar-texto">
-              Blog<span class="logo__bold">DeCafé</span>
-            </h1>
-          </a>
-          <div class="navegacion">
-            <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
-            <a class="navegacion__enlace" href="cursos.html">Cursos</a>
-            <a class="navegacion__enlace" href="contacto.html">Contacto</a>
-          </div>
-        </div>
+      <div class="barra contenedor">
+        <a href="index.html">
+          <h1 class="barra__bold no-margin centrar-texto">
+            Blog<span class="barra__normal">DeCafé</span>
+          </h1>
+        </a>
+        <nav class="navegacion">
+          <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
+          <a class="navegacion__enlace" href="cursos.html">Cursos</a>
+          <a class="navegacion__enlace" href="contacto.html">Contacto</a>
+        </nav>
       </div>
     </footer>
+    <script src="/js/modernizr.js"></script>
   </body>
 </html>
