--- a/index.html
+++ b/index.html
@@ -4,52 +4,74 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/normalize.css" />
+    <meta name="description" content="Pagina web de sitio de café" />
+    <title>BlogDeCafé</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!--Prefetch-->
+    <link rel="Prefetch" href="/cursos.html" as="document" />
+    <!--Inicia el preload-->
+    <link rel="preload" href="/css/normalize.css" as="style" />
+    <link rel="stylesheet" href="/css/normalize.css" />
+
+    <link
+      rel="preload"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap"
+      crossorigin="crossorigin"
+      as="font"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/style.css" />
 
-    <title>Document</title>
+    <link rel="preload" href="/css/style.css" as="style" />
+    <link rel="stylesheet" href="/css/style.css"">
+
+    <!-- cierra el preload-->
   </head>
   <body>
     <header class="header">
       <div class="contenedor">
         <div class="barra">
-          <a class="logo" href="index.html">
-            <h1 class="logo__nombre no-margin centrar-texto">
-              Blog<span class="logo__bold">DeCafé</span>
+          <a href="index.html">
+            <h1 class="barra__bold no-margin centrar-texto">
+              Blog<span class="barra__normal">DeCafé</span>
             </h1>
           </a>
-          <div class="navegacion">
+          <nav class="navegacion">
             <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
             <a class="navegacion__enlace" href="cursos.html">Cursos</a>
             <a class="navegacion__enlace" href="contacto.html">Contacto</a>
-          </div>
+          </nav>
+        </div>
+        <div class="header__texto">
+          <h2 class="centrar-texto no-margin">
+            Blog de Café con consejos y cursos
+          </h2>
+          <p class="centrar-texto no-margin">
+            Aprende de los expertos con las mejores recetas y consejos
+          </p>
         </div>
       </div>
-      <div class="header__texto">
-        <h2 class="centrar-texto no-margin">
-          Blog de Café con consejos y cursos
-        </h2>
-        <p class="centrar-texto no-margin">
-          Aprende de los expertos con las mejores recetas y consejos
-        </p>
-      </div>
     </header>
-    <div class="contenedor contenido-principal">
+    <div class="contenido-principal contenedor">
       <main>
-        <h3>Nuestro blog</h3>
-        <article class="entrada">
-          <div class="entrada__imagen">
-            <img src="/img/blog1.jpg" alt="" />
+        <h3>Nuestro Blog</h3>
+        <div class="blog">
+          <div class="blog__imagen">
+            <picture>
+              <source
+                loading="lazy"
+                srcset="img/blog1.webp"
+                type="image/webp"
+              />
+              <img loading="lazy" src="/img/blog1.jpg" alt="imagen blog" />
+            </picture>
           </div>
-          <div class="entrada__contenido">
-            <h4 class="no-margin">Tipos de granos de café</h4>
-            <p>
+          <div class="blog__info">
+            <h4 class="no-margin">Tipos de granos de cafe</h4>
+            <p class="no">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit.
               Delectus, autem perspiciatis! Omnis quas, repudiandae optio
               voluptatibus corporis inventore laborum nesciunt dolor, cum
@@ -57,17 +79,24 @@
               exercitationem?
             </p>
             <a class="boton boton--primario" href="entrada.html"
-              >Leer entrada</a
+              >Leer Entrada</a
             >
           </div>
-        </article>
-        <article class="entrada">
-          <div class="entrada__imagen">
-            <img src="/img/blog2.jpg" alt="" />
+        </div>
+        <div class="blog">
+          <div class="blog__imagen">
+            <picture>
+              <source
+                loading="lazy"
+                srcset="/img/blog2.webp"
+                type="image/webp"
+              />
+              <img loading="lazy" src="/img/blog2.jpg" alt="imagen blog" />
+            </picture>
           </div>
-          <div class="entrada__contenido">
-            <h4>3 Deliciosas recetas de cafe</h4>
-            <p>
+          <div class="blog__info">
+            <h4 class="no-margin">3 Deliciosas recetas de café</h4>
+            <p class="no">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit.
               Delectus, autem perspiciatis! Omnis quas, repudiandae optio
               voluptatibus corporis inventore laborum nesciunt dolor, cum
@@ -75,17 +104,24 @@
               exercitationem?
             </p>
             <a class="boton boton--primario" href="entrada.html"
-              >Leer entrada</a
+              >Leer Entrada</a
             >
           </div>
-        </article>
-        <article class="entrada">
-          <div class="entrada__imagen">
-            <img src="/img/blog3.jpg" alt="" />
+        </div>
+        <div class="blog">
+          <div class="blog__imagen">
+            <picture>
+              <source
+                loading="lazy"
+                srcset="/img/blog3.webp"
+                type="image/webp"
+              />
+            </picture>
+            <img loading="lazy" src="/img/blog3.jpg" alt="imagen blog" />
           </div>
-          <div class="entrada__contenido">
+          <div class="blog__info">
             <h4 class="no-margin">Beneficios del café</h4>
-            <p>
+            <p class="no">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit.
               Delectus, autem perspiciatis! Omnis quas, repudiandae optio
               voluptatibus corporis inventore laborum nesciunt dolor, cum
@@ -93,66 +129,65 @@
               exercitationem?
             </p>
             <a class="boton boton--primario" href="entrada.html"
-              >Leer entrada</a
+              >Leer Entrada</a
             >
           </div>
-        </article>
+        </div>
       </main>
       <aside class="sidebar">
-        <h3>Nuestros cursos y talleres</h3>
+        <h3>Nuestros Cursos y Talleres</h3>
         <li class="widget-curso">
-          <h4 class="no-margin">Tecnicas de extracción de café</h4>
-          <p class="widget-curso__label">
-            Precio:<span class="widget-curso__info">Gratis</span>
+          <h4 class="no-margin">Tecnicas de Extraccion de cafe</h4>
+          <p class="widget__bold">
+            Precio:<span class="widget__normal">Gratis</span>
           </p>
-          <p class="widget-curso__label">
-            Cupo:<span class="widget-curso__info">20</span>
+          <p class="widget__bold">
+            Cupo:<span class="widget__normal">20</span>
           </p>
           <a class="boton boton--secundario" href="entrada.html"
-            >Mas informacion</a
+            >Mas Informacion</a
           >
         </li>
         <li class="widget-curso">
-          <h4 class="no-margin">4 Recetas de café para principiantes</h4>
-          <p class="widget-curso__label">
-            Precio:<span class="widget-curso__info">Gratis</span>
+          <h4 class="no-margin">4 Recetas de Café para principiantes</h4>
+          <p class="widget__bold">
+            Precio:<span class="widget__normal">Gratis</span>
           </p>
-          <p class="widget-curso__label">
-            Cupo:<span class="widget-curso__info">20</span>
+          <p class="widget__bold">
+            Cupo:<span class="widget__normal">20</span>
           </p>
           <a class="boton boton--secundario" href="entrada.html"
-            >Mas informacion</a
+            >Mas Informacion</a
           >
         </li>
         <li class="widget-curso">
-          <h4 class="no-margin">Tecnicas para moler café</h4>
-          <p class="widget-curso__label">
-            Precio:<span class="widget-curso__info">Gratis</span>
+          <h4 class="no-margin">Tecnicas para moler cafe</h4>
+          <p class="widget__bold">
+            Precio:<span class="widget__normal">Gratis</span>
           </p>
-          <p class="widget-curso__label">
-            Cupo:<span class="widget-curso__info">20</span>
+          <p class="widget__bold">
+            Cupo:<span class="widget__normal">20</span>
           </p>
           <a class="boton boton--secundario" href="entrada.html"
-            >Mas informacion</a
+            >Mas Informacion</a
           >
         </li>
       </aside>
     </div>
     <footer class="footer">
-      <div class="contenedor">
-        <div class="barra">
-          <a class="logo" href="index.html">
-            <h1 class="logo__nombre no-margin centrar-texto">
-              Blog<span class="logo__bold">DeCafé</span>
-            </h1>
-          </a>
-          <div class="navegacion">
-            <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
-            <a class="navegacion__enlace" href="cursos.html">Cursos</a>
-            <a class="navegacion__enlace" href="contacto.html">Contacto</a>
-          </div>
-        </div>
+      <div class="barra contenedor">
+        <a href="index.html">
+          <h1 class="barra__bold no-margin centrar-texto">
+            Blog<span class="barra__normal">DeCafé</span>
+          </h1>
+        </a>
+        <nav class="navegacion">
+          <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
+          <a class="navegacion__enlace" href="cursos.html">Cursos</a>
+          <a class="navegacion__enlace" href="contacto.html">Contacto</a>
+        </nav>
       </div>
     </footer>
+    <script src="/js/modernizr.js"></script>
   </body>
 </html>
