--- a/nosotros.html
+++ b/nosotros.html
@@ -11,74 +11,73 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/style.css" />
-
+    <link rel="stylesheet" href="/css/style.css"">
     <title>Document</title>
   </head>
   <body>
     <header class="header">
       <div class="contenedor">
         <div class="barra">
-          <a class="logo" href="index.html">
-            <h1 class="logo__nombre no-margin centrar-texto">
-              Blog<span class="logo__bold">DeCafé</span>
+          <a href="index.html">
+            <h1 class="barra__bold no-margin centrar-texto">
+              Blog<span class="barra__normal">DeCafé</span>
             </h1>
           </a>
-          <div class="navegacion">
+          <nav class="navegacion">
             <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
             <a class="navegacion__enlace" href="cursos.html">Cursos</a>
             <a class="navegacion__enlace" href="contacto.html">Contacto</a>
-          </div>
+          </nav>
         </div>
-      </div>
-      <div class="header__texto">
-        <h2 class="centrar-texto no-margin">
-          Blog de Café con consejos y cursos
-        </h2>
-        <p class="centrar-texto no-margin">
-          Aprende de los expertos con las mejores recetas y consejos
-        </p>
+        <div class="header__texto">
+          <h2 class="centrar-texto no-margin">
+            Blog de Café con consejos y cursos
+          </h2>
+          <p class="centrar-texto no-margin">
+            Aprende de los expertos con las mejores recetas y consejos
+          </p>
+        </div>
       </div>
     </header>
     <div class="contenedor">
-      <h3 class="centrar-texto">Sobre Nosotros</h3>
-      <div class="nosotros-grid">
-        <img
-          class="nosotros__imagen"
-          src="/img/nosotros.jpg"
-          alt="imagen nosotros"
-        />
-        <div class="nosotros__contenido">
-          <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text
-            ever since the 1500s, when an unknown printer took a galley of type
-            .
-          </p>
-          <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text
-            ever since the 1500s, when an unknown printer took a galley of type
-            and scrambled it to make a type specimen book. It has survived not.
-          </p>
-        </div>
-      </div>
-    </div>
-    <footer class="footer">
-      <div class="contenedor">
-        <div class="barra">
-          <a class="logo" href="index.html">
-            <h1 class="logo__nombre no-margin centrar-texto">
-              Blog<span class="logo__bold">DeCafé</span>
-            </h1>
-          </a>
-          <div class="navegacion">
-            <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
-            <a class="navegacion__enlace" href="cursos.html">Cursos</a>
-            <a class="navegacion__enlace" href="contacto.html">Contacto</a>
+      <main class="sobre-nosotros">
+        <h3 class="centrar-texto">Sobre Nosotros</h3>
+        <div class="nosotros-main">
+          <div class="nosotros__imagen">
+            <img src="/img/nosotros.jpg" alt="imagen nosotros" />
+          </div>
+          <div class="nosotros__info">
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type .
+            </p>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type and scrambled it to make a type specimen book. It has
+              survived not.
+            </p>
           </div>
         </div>
+      </main>
+    </div>
+    <footer class="footer">
+      <div class="barra contenedor">
+        <a href="index.html">
+          <h1 class="barra__bold no-margin centrar-texto">
+            Blog<span class="barra__normal">DeCafé</span>
+          </h1>
+        </a>
+        <nav class="navegacion">
+          <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
+          <a class="navegacion__enlace" href="cursos.html">Cursos</a>
+          <a class="navegacion__enlace" href="contacto.html">Contacto</a>
+        </nav>
       </div>
     </footer>
+    <script src="/js/modernizr.js"></script>
   </body>
 </html>
